background-clip:var(--a) invalidates -webkit-background-clip:text when --a:text https://bugs.webkit.org/show_bug.cgi?id=199410

Patch by Tyler Wilcock <twilco.o@protonmail.com> on 2020-10-07
Reviewed by Darin Adler.

Source/WebCore:

Parse the `text` value (CSSValueText) for the `background-clip`
property.  While the bug this patch is associated with is about CSS
variable interactions, the underlying issue is that we weren't parsing
the `text` value for `background-clip`.

https://www.w3.org/TR/2017/CR-css-backgrounds-3-20171017/#the-background-clip

This patch also removes the ability to parse the `-webkit-text` value
for the `background-origin` (CSSPropertyBackgroundOrigin) property by
removing `CSSValueWebkitText` from `consumeBackgroundBox`. Neither
`-webkit-text` nor the unprefixed `text` are valid values for this property.

https://www.w3.org/TR/2017/CR-css-backgrounds-3-20171017/#the-background-origin

Updated existing `fast/css/background-clip-text.html` test.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeBackgroundBox): Removed `CSSValueWebkitText`.
(WebCore::consumeBackgroundClip): Added.
(WebCore::consumeBackgroundComponent): Use `consumeBackgroundClip` for
the `CSSPropertyBackgroundClip` property case.

LayoutTests:

We now parse the `text` value for the `background-clip` property, so
update this test to reflect that.

* fast/css/background-clip-text-expected.txt:
* fast/css/background-clip-text.html: Parse `text` value.

Canonical link: https://commits.webkit.org/230222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268158 268f45cc-cd09-0410-ab3c-d52691b4dbfc